--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Chatbot</string>
+    <string name="app_name">Fox Ai</string>
+    <string name="login">Login</string>
 </resources>
